--- a/Strings/zh-cn/Resources.resw
+++ b/Strings/zh-cn/Resources.resw
@@ -168,4 +168,16 @@
   <data name="Total_Gong_De.Text" xml:space="preserve">
     <value>累计功德</value>
   </data>
+  <data name="Shell_Auto.Content" xml:space="preserve">
+    <value>自动挡</value>
+  </data>
+  <data name="Shell_UndateLogs.Content" xml:space="preserve">
+    <value>更新日志</value>
+  </data>
+  <data name="Auto_Knock_Start.Content" xml:space="preserve">
+    <value>启动</value>
+  </data>
+  <data name="Auto_Knock_Stop.Content" xml:space="preserve">
+    <value>暂停</value>
+  </data>
 </root>
